# FileCountAlert

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  config.yml
src/: main.rs
